Support cross building of custom jre